--- a/src/countermanager/liveticker/ttm/TTMPrivate.template
+++ b/src/countermanager/liveticker/ttm/TTMPrivate.template
@@ -3,12 +3,12 @@ package countermanger.liveticker.ttm;
 
 public class TTMPrivate  {
     // Encrypt the password and return it as a (base64 encoded) string
-    public static String encryptPassword(TTM ttm, String pwd) {
+    public static String encryptPassword(String pwd) {
         return pwd;
     }
     
     // Decrypt a (base64 encoded) encrypted password and return it as a string
-    public static String decryptPassword(TTM ttm, String pwd) {
+    public static String decryptPassword(String pwd) {
         return pwd;
     }
 }
