Rework simulation database and add some tests
git-svn-id: https://localhost/svn/CounterManager/trunk@7013 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,131 +1,118 @@
-annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-application.args=
-application.title=CounterManager
-application.vendor=Administrator
-auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
-build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form,**/*.js,**/*.pas,**/*.html,**/*.css,**/*.js
-# This directory is removed when the project is cleaned:
-build.dir=build
-build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
-build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-debug.classpath=\
-    ${run.classpath}
-debug.modulepath=\
-    ${run.modulepath}
-debug.test.classpath=\
-    ${run.test.classpath}
-debug.test.modulepath=\
-    ${run.test.modulepath}
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/CounterManager.jar
-dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
-excludes=countermanager/liveticker/ttm/TTMPrivate.java
-# file.reference.edtftpj.jar=lib/edtftpj.jar
-file.reference.gson-2.8.6.jar=lib\\gson-2.8.6.jar
-file.reference.ini4j-0.5.4.jar=lib\\ini4j-0.5.4.jar
-file.reference.istack-commons-runtime.jar=lib\\istack-commons-runtime.jar
-file.reference.jakarta.activation-api.jar=lib\\jakarta.activation-api.jar
-file.reference.jakarta.xml.bind-api.jar=lib\\jakarta.xml.bind-api.jar
+file.reference.byte-buddy-1.8.15.jar=lib\\byte-buddy-1.8.15.jar
+file.reference.client-combined-3.141.59.jar=lib\\client-combined-3.141.59.jar
+file.reference.commons-exec-1.3.jar=lib\\commons-exec-1.3.jar
+file.reference.guava-25.0-jre.jar=lib\\guava-25.0-jre.jar
+#Sun Jun 21 11:34:35 CEST 2020
 file.reference.jaxb-runtime.jar=lib\\jaxb-runtime.jar
-file.reference.mssql-jdbc-8.2.0.jre11.jar=lib\\mssql-jdbc-8.2.0.jre11.jar
-file.reference.redstone.jar=lib/redstone.jar
-file.reference.RXTXcomm.jar=lib/RXTXcomm.jar
-file.reference.vernacular-1.7.jar=lib\\vernacular-1.7.jar
-includes=**
-jar.archive.disabled=${jnlp.enabled}
-jar.compress=false
-jar.index=${jnlp.enabled}
-javac.classpath=\
-    ${file.reference.RXTXcomm.jar}:\
-    ${file.reference.redstone.jar}:\
-    ${file.reference.edtftpj.jar}:\
-    ${libs.beans-binding.classpath}:\
-    ${file.reference.jakarta.activation-api.jar}:\
-    ${file.reference.jakarta.xml.bind-api.jar}:\
-    ${file.reference.istack-commons-runtime.jar}:\
-    ${file.reference.jaxb-runtime.jar}:\
-    ${file.reference.vernacular-1.7.jar}:\
-    ${file.reference.gson-2.8.6.jar}:\
-    ${file.reference.ini4j-0.5.4.jar}:\
-    ${file.reference.mssql-jdbc-8.2.0.jre11.jar}
-# Space-separated list of extra javac options
-javac.compilerargs=
-javac.deprecation=false
-javac.external.vm=false
-javac.modulepath=
-javac.processormodulepath=
-javac.processorpath=\
-    ${javac.classpath}
-javac.source=11
-javac.target=11
+file.reference.okhttp-3.11.0.jar=lib\\okhttp-3.11.0.jar
+file.reference.okio-1.14.0.jar=lib\\okio-1.14.0.jar
+file.reference.webdrivermanager-4.0.0-fat.jar=lib\\webdrivermanager-4.0.0-fat.jar
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit.classpath}
-javac.test.modulepath=\
-    ${javac.modulepath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=
-javadoc.html5=false
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
-javadoc.private=false
-javadoc.reference.ini4j-0.5.4.jar=lib/ini4j-0.5.4-javadoc.jar
-javadoc.reference.redstone.jar=F:\\tools\\java\\redstone\\src
-javadoc.splitindex=true
-javadoc.use=true
-javadoc.version=false
-javadoc.windowtitle=
-jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
-jlink.launcher=false
-jlink.launcher.name=CounterManager
-jnlp.codebase.type=no.codebase
-jnlp.descriptor=application
-jnlp.enabled=false
-jnlp.mixed.code=default
+    ${file.reference.client-combined-3.141.59.jar}:\
+    ${file.reference.webdrivermanager-4.0.0-fat.jar}:\
+    ${file.reference.guava-25.0-jre.jar}:\
+    ${file.reference.byte-buddy-1.8.15.jar}:\
+    ${file.reference.commons-exec-1.3.jar}:\
+    ${file.reference.okhttp-3.11.0.jar}:\
+    ${file.reference.okio-1.14.0.jar}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
+excludes=countermanager/liveticker/ttm/TTMPrivate.java
+dist.javadoc.dir=${dist.dir}/javadoc
+file.reference.vernacular-1.7.jar=lib\\vernacular-1.7.jar
+javadoc.reference.client-combined-3.141.59.jar=https://www.selenium.dev/selenium/docs/api/java/index.html
 jnlp.offline-allowed=false
-jnlp.signed=false
-jnlp.signing=
-jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=countermanager.gui.MainFrame
-# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
-manifest.custom.codebase=
-# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
-manifest.custom.permissions=
-manifest.file=manifest.mf
-meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
-platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project
-# (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
-# or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=
-run.modulepath=\
-    ${javac.modulepath}
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-run.test.modulepath=\
-    ${javac.test.modulepath}
-source.encoding=UTF-8
+jnlp.signing.alias=
+source.reference.client-combined-3.141.59.jar=lib/client-combined-3.141.59-sources.jar
 source.reference.ini4j-0.5.4.jar=lib/ini4j-0.5.4-sources.jar
-source.reference.vernacular-1.7.jar=lib/vernacular-vnc-1.7.0.zip!/vernacular-vnc-1.7.0/src/main/java/
-src.dir=src
-src.src.dir=src
+annotation.processing.enabled=true
+debug.modulepath=${run.modulepath}
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
+jar.archive.disabled=${jnlp.enabled}
+javac.source=11
+javadoc.use=true
+annotation.processing.enabled.in.editor=false
+javadoc.notree=false
+javadoc.reference.redstone.jar=F\:\\tools\\java\\redstone\\src
+application.vendor=Administrator
+javadoc.additionalparam=
+jnlp.signed=false
+jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
+manifest.custom.permissions=
+mkdist.disabled=false
+run.test.modulepath=${javac.test.modulepath}
+build.classes.dir=${build.dir}/classes
+debug.test.modulepath=${run.test.modulepath}
+javadoc.windowtitle=
+source.reference.webdrivermanager-4.0.0-fat.jar=lib/webdrivermanager-webdrivermanager-4.0.0.zip!/webdrivermanager-webdrivermanager-4.0.0/src/main/java/
+test.test.dir=test
+javadoc.reference.ini4j-0.5.4.jar=lib/ini4j-0.5.4-javadoc.jar
+file.reference.RXTXcomm.jar=lib/RXTXcomm.jar
+jnlp.enabled=false
+dist.dir=dist
+build.dir=build
+javadoc.version=false
+file.reference.jakarta.xml.bind-api.jar=lib\\jakarta.xml.bind-api.jar
+file.reference.redstone.jar=lib/redstone.jar
+debug.test.classpath=${run.test.classpath}
+javac.external.vm=false
+javac.target=11
+jnlp.signing=
+platform.active=default_platform
+manifest.file=manifest.mf
+javadoc.html5=false
+meta.inf.dir=${src.dir}/META-INF
+javac.modulepath=
+run.classpath=${javac.classpath}\:${build.classes.dir}
+javac.processorpath=${javac.classpath}
 test.src.dir=test
+source.reference.vernacular-1.7.jar=lib/vernacular-vnc-1.7.0.zip\!/vernacular-vnc-1.7.0/src/main/java/
+run.modulepath=${javac.modulepath}
+jnlp.codebase.type=no.codebase
+jar.index=${jnlp.enabled}
+build.sysclasspath=ignore
+javac.compilerargs=
+javadoc.noindex=false
+javadoc.private=false
+javadoc.author=false
+endorsed.classpath=
+main.class=countermanager.gui.MainFrame
+src.src.dir=src
+junit.selected.version=4
+source.encoding=UTF-8
+includes=**
+jar.compress=false
+javadoc.nonavbar=false
+annotation.processing.processors.list=
+javac.deprecation=false
+jlink.launcher=false
+file.reference.jakarta.activation-api.jar=lib\\jakarta.activation-api.jar
+jnlp.mixed.code=default
+jlink.launcher.name=CounterManager
+build.generated.sources.dir=${build.dir}/generated-sources
+javadoc.splitindex=true
+javac.processormodulepath=
+run.jvmargs=
+file.reference.ini4j-0.5.4.jar=lib\\ini4j-0.5.4.jar
+javadoc.encoding=
+javac.classpath=${file.reference.RXTXcomm.jar}\:${file.reference.redstone.jar}\:${file.reference.edtftpj.jar}\:${libs.beans-binding.classpath}\:${file.reference.jakarta.activation-api.jar}\:${file.reference.jakarta.xml.bind-api.jar}\:${file.reference.istack-commons-runtime.jar}\:${file.reference.jaxb-runtime.jar}\:${file.reference.vernacular-1.7.jar}\:${file.reference.gson-2.8.6.jar}\:${file.reference.ini4j-0.5.4.jar}\:${file.reference.mssql-jdbc-8.2.0.jre11.jar}
+build.classes.excludes=**/*.java,**/*.form,**/*.js,**/*.pas,**/*.html,**/*.css,**/*.js
+dist.jar=${dist.dir}/CounterManager.jar
+build.test.classes.dir=${build.dir}/test/classes
+build.test.results.dir=${build.dir}/test/results
+file.reference.istack-commons-runtime.jar=lib\\istack-commons-runtime.jar
+file.reference.gson-2.8.6.jar=lib\\gson-2.8.6.jar
+build.generated.dir=${build.dir}/generated
+file.reference.mssql-jdbc-8.2.0.jre11.jar=lib\\mssql-jdbc-8.2.0.jre11.jar
+application.args=
+application.title=CounterManager
+javac.test.modulepath=${javac.modulepath}
+manifest.custom.codebase=
+jnlp.descriptor=application
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+annotation.processing.run.all.processors=true
+src.dir=src
+debug.classpath=${run.classpath}
