--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -15,6 +15,8 @@ libs.junit.classpath=\
 libs.junit.javadoc=\
     ${base}/junit/junit-3.8.2-api.zip
 file.reference.edtftpj.jar=lib/edtftpj.jar
+# To use sftp create a file nblibraries-private.properties with the following line:
+# file.reference.edtftpj.jar=../FtpClient/dist/FtpClient.jar:../FtpClient/lib/edtftpj-pro.jar
 libs.junit_4.classpath=\
     ${base}/junit_4/junit-4.12.jar
 libs.junit_4.displayName=JUnit 4.12
@@ -23,7 +25,6 @@ libs.junit_4.javadoc=\
 libs.junit_4.prop-maven-dependencies=junit:junit:4.12:jar
 libs.junit_4.src=\
     ${base}/junit_4/junit-4.12-sources.jar
-# file.reference.edtftpj.jar=../FtpClient/dist/FtpClient.jar:../FtpClient/lib/edtftpj-pro.jar
 libs.junit_5.classpath=\
     ${base}/junit_5/junit-jupiter-api-5.6.0.jar;\
     ${base}/junit_5/junit-jupiter-params-5.6.0.jar;\
