--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,11 @@
 #Sat Jun 27 10:47:05 CEST 2020
 excludes=countermanager/liveticker/ttm/TTMPrivate.java
+file.reference.commons-io-2.6.jar=lib/commons-io-2.6.jar
+file.reference.commons-lang3-3.10.jar=lib/commons-lang3-3.10.jar
+file.reference.httpclient5-5.0.jar=lib/httpclient5-5.0.jar
+file.reference.httpcore5-5.0.jar=lib/httpcore5-5.0.jar
+file.reference.slf4j-api-1.7.30.jar=lib/slf4j-api-1.7.30.jar
+file.reference.slf4j-simple-1.7.30.jar=lib/slf4j-simple-1.7.30.jar
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -137,7 +143,13 @@ manifest.custom.codebase=
 jnlp.descriptor=application
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+    ${build.test.classes.dir}:\
+    ${file.reference.slf4j-api-1.7.30.jar}:\
+    ${file.reference.slf4j-simple-1.7.30.jar}:\
+    ${file.reference.httpcore5-5.0.jar}:\
+    ${file.reference.httpclient5-5.0.jar}:\
+    ${file.reference.commons-lang3-3.10.jar}:\
+    ${file.reference.commons-io-2.6.jar}
 annotation.processing.run.all.processors=true
 src.dir=src
 file.reference.selenium-chrome-driver-3.141.59.jar=lib\\selenium-chrome-driver-3.141.59.jar
