--- a/ivy.xml
+++ b/ivy.xml
@@ -34,6 +34,8 @@
         <dependency org="org.slf4j" name="slf4j-simple" rev="1.7.30"/>        
         <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency org="junit" name="junit" rev="4.13" conf="test->default;sources->sources;javadoc->javadoc" />
+        <!-- https://mvnrepository.com/artifact/com.github.tntim96/JSCover -->
+        <dependency org="com.github.tntim96" name="JSCover" rev="2.0.10" conf="test->default;sources->sources;javadoc->javadoc" />
         
     </dependencies>
 </ivy-module>
