Temp. use own JSCover snapshot with bug fixes
git-svn-id: https://localhost/svn/CounterManager/trunk@7108 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,13 @@
 #Sat Jun 27 10:47:05 CEST 2020
 excludes=countermanager/liveticker/ttm/TTMPrivate.java
+file.reference.closure-compiler-v20200628.jar=lib\\closure-compiler-v20200628.jar
 file.reference.commons-io-2.6.jar=lib/commons-io-2.6.jar
 file.reference.commons-lang3-3.10.jar=lib/commons-lang3-3.10.jar
 file.reference.httpclient5-5.0.jar=lib/httpclient5-5.0.jar
 file.reference.httpcore5-5.0.jar=lib/httpcore5-5.0.jar
+file.reference.JSCover-2.0.11-SNAPSHOT.jar=lib\\JSCover-2.0.11-SNAPSHOT.jar
+file.reference.mssql-jdbc-8.4.0.jre11.jar=lib/mssql-jdbc-8.4.0.jre11.jar
+file.reference.selenium-support-3.141.59.jar=lib\\selenium-support-3.141.59.jar
 file.reference.slf4j-api-1.7.30.jar=lib/slf4j-api-1.7.30.jar
 file.reference.slf4j-simple-1.7.30.jar=lib/slf4j-simple-1.7.30.jar
 javac.test.classpath=\
@@ -19,8 +23,12 @@ javac.test.classpath=\
     ${file.reference.webdrivermanager-4.0.0.jar}:\
     ${file.reference.selenium-api-3.141.59.jar}:\
     ${file.reference.selenium-chrome-driver-3.141.59.jar}:\
-    ${file.reference.selenium-remote-driver-3.141.59.jar}
+    ${file.reference.selenium-remote-driver-3.141.59.jar}:\
+    ${file.reference.selenium-support-3.141.59.jar}:\
+    ${file.reference.closure-compiler-v20200628.jar}:\
+    ${file.reference.JSCover-2.0.11-SNAPSHOT.jar}
 file.reference.junit-4.13.jar=lib/junit-4.13.jar
+javadoc.reference.mssql-jdbc-8.4.0.jre11.jar=lib/mssql-jdbc-8.4.0.jre11-javadoc.jar
 source.reference.gson-2.8.6.jar=lib/gson-2.8.6-sources.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 jnlp.offline-allowed=false
@@ -40,7 +48,6 @@ javadoc.notree=false
 javadoc.reference.gson-2.8.6.jar=lib/gson-2.8.6-javadoc.jar
 javadoc.reference.redstone.jar=F\:\\tools\\java\\redstone\\src
 application.vendor=Administrator
-file.reference.mssql-jdbc-8.2.2.jre11.jar=lib\\mssql-jdbc-8.2.2.jre11.jar
 file.reference.guava-25.0-jre.jar=lib\\guava-25.0-jre.jar
 javadoc.additionalparam=
 jnlp.signed=false
@@ -54,6 +61,8 @@ debug.test.modulepath=${run.test.modulepath}
 javadoc.windowtitle=
 file.reference.jaxb-api-2.3.1.jar=lib\\jaxb-api-2.3.1.jar
 file.reference.selenium-remote-driver-3.141.59.jar=lib\\selenium-remote-driver-3.141.59.jar
+source.reference.JSCover-2.0.11-SNAPSHOT.jar=lib/JSCover-2.0.11-SNAPSHOT-sources.jar
+source.reference.mssql-jdbc-8.4.0.jre11.jar=lib/mssql-jdbc-8.4.0.jre11-sources.jar
 test.test.dir=test
 javadoc.reference.ini4j-0.5.4.jar=lib/ini4j-0.5.4-javadoc.jar
 file.reference.RXTXcomm.jar=lib/RXTXcomm.jar
@@ -114,6 +123,7 @@ file.reference.ini4j-0.5.4.jar=lib\\ini4j-0.5.4.jar
 javadoc.encoding=
 javac.classpath=\
     ${file.reference.RXTXcomm.jar}:\
+    ${file.reference.mssql-jdbc-8.4.0.jre11.jar}:\
     ${file.reference.redstone.jar}:\
     ${file.reference.edtftpj.jar}:\
     ${libs.beans-binding.classpath}:\
@@ -124,7 +134,6 @@ javac.classpath=\
     ${file.reference.istack-commons-runtime-3.0.11.jar}:\
     ${file.reference.jakarta.activation-1.2.2.jar}:\
     ${file.reference.javax.activation-api-1.2.0.jar}:\
-    ${file.reference.mssql-jdbc-8.2.2.jre11.jar}:\
     ${file.reference.vernacular-1.9.jar}
 build.classes.excludes=**/*.java,**/*.form,**/*.js,**/*.pas,**/*.html,**/*.css,**/*.js
 dist.jar=${dist.dir}/CounterManager.jar
