--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,8 +5,8 @@ file.reference.commons-io-2.6.jar=lib/commons-io-2.6.jar
 file.reference.commons-lang3-3.10.jar=lib/commons-lang3-3.10.jar
 file.reference.httpclient5-5.0.jar=lib/httpclient5-5.0.jar
 file.reference.httpcore5-5.0.jar=lib/httpcore5-5.0.jar
-file.reference.JSCover-2.0.11-SNAPSHOT.jar=lib\\JSCover-2.0.11-SNAPSHOT.jar
-file.reference.mssql-jdbc-8.4.0.jre11.jar=lib/mssql-jdbc-8.4.0.jre11.jar
+file.reference.JSCover-2.0.11-SNAPSHOT.jar=lib/JSCover-2.0.11-SNAPSHOT.jar
+file.reference.mssql-jdbc-8.4.1.jre11.jar=lib\\mssql-jdbc-8.4.1.jre11.jar
 file.reference.selenium-support-3.141.59.jar=lib\\selenium-support-3.141.59.jar
 file.reference.slf4j-api-1.7.30.jar=lib/slf4j-api-1.7.30.jar
 file.reference.slf4j-simple-1.7.30.jar=lib/slf4j-simple-1.7.30.jar
@@ -28,7 +28,7 @@ javac.test.classpath=\
     ${file.reference.closure-compiler-v20200628.jar}:\
     ${file.reference.JSCover-2.0.11-SNAPSHOT.jar}
 file.reference.junit-4.13.jar=lib/junit-4.13.jar
-javadoc.reference.mssql-jdbc-8.4.0.jre11.jar=lib/mssql-jdbc-8.4.0.jre11-javadoc.jar
+javadoc.reference.mssql-jdbc-8.4.1.jre11.jar=lib/mssql-jdbc-8.4.1.jre11-javadoc.jar
 source.reference.gson-2.8.6.jar=lib/gson-2.8.6-sources.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 jnlp.offline-allowed=false
@@ -62,7 +62,7 @@ javadoc.windowtitle=
 file.reference.jaxb-api-2.3.1.jar=lib\\jaxb-api-2.3.1.jar
 file.reference.selenium-remote-driver-3.141.59.jar=lib\\selenium-remote-driver-3.141.59.jar
 source.reference.JSCover-2.0.11-SNAPSHOT.jar=lib/JSCover-2.0.11-SNAPSHOT-sources.jar
-source.reference.mssql-jdbc-8.4.0.jre11.jar=lib/mssql-jdbc-8.4.0.jre11-sources.jar
+source.reference.mssql-jdbc-8.4.1.jre11.jar=lib/mssql-jdbc-8.4.1.jre11-sources.jar
 test.test.dir=test
 javadoc.reference.ini4j-0.5.4.jar=lib/ini4j-0.5.4-javadoc.jar
 file.reference.RXTXcomm.jar=lib/RXTXcomm.jar
@@ -123,7 +123,6 @@ file.reference.ini4j-0.5.4.jar=lib\\ini4j-0.5.4.jar
 javadoc.encoding=
 javac.classpath=\
     ${file.reference.RXTXcomm.jar}:\
-    ${file.reference.mssql-jdbc-8.4.0.jre11.jar}:\
     ${file.reference.redstone.jar}:\
     ${file.reference.edtftpj.jar}:\
     ${libs.beans-binding.classpath}:\
@@ -134,7 +133,8 @@ javac.classpath=\
     ${file.reference.istack-commons-runtime-3.0.11.jar}:\
     ${file.reference.jakarta.activation-1.2.2.jar}:\
     ${file.reference.javax.activation-api-1.2.0.jar}:\
-    ${file.reference.vernacular-1.9.jar}
+    ${file.reference.vernacular-1.9.jar}:\
+    ${file.reference.mssql-jdbc-8.4.1.jre11.jar}
 build.classes.excludes=**/*.java,**/*.form,**/*.js,**/*.pas,**/*.html,**/*.css,**/*.js
 dist.jar=${dist.dir}/CounterManager.jar
 build.test.classes.dir=${build.dir}/test/classes
