--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -10,6 +10,7 @@ file.reference.mssql-jdbc-8.4.1.jre11.jar=lib\\mssql-jdbc-8.4.1.jre11.jar
 file.reference.selenium-support-3.141.59.jar=lib\\selenium-support-3.141.59.jar
 file.reference.slf4j-api-1.7.30.jar=lib/slf4j-api-1.7.30.jar
 file.reference.slf4j-simple-1.7.30.jar=lib/slf4j-simple-1.7.30.jar
+file.reference.vernacular-1.10.jar=lib\\vernacular-1.10.jar
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -133,8 +134,8 @@ javac.classpath=\
     ${file.reference.istack-commons-runtime-3.0.11.jar}:\
     ${file.reference.jakarta.activation-1.2.2.jar}:\
     ${file.reference.javax.activation-api-1.2.0.jar}:\
-    ${file.reference.vernacular-1.9.jar}:\
-    ${file.reference.mssql-jdbc-8.4.1.jre11.jar}
+    ${file.reference.mssql-jdbc-8.4.1.jre11.jar}:\
+    ${file.reference.vernacular-1.10.jar}
 build.classes.excludes=**/*.java,**/*.form,**/*.js,**/*.pas,**/*.html,**/*.css,**/*.js
 dist.jar=${dist.dir}/CounterManager.jar
 build.test.classes.dir=${build.dir}/test/classes
@@ -147,7 +148,6 @@ application.args=
 application.title=CounterManager
 javac.test.modulepath=\
     ${javac.modulepath}
-file.reference.vernacular-1.9.jar=lib/vernacular-1.9.jar
 manifest.custom.codebase=
 jnlp.descriptor=application
 run.test.classpath=\
