Don't evict modules if a newer one is also a dependecy
git-svn-id: https://localhost/svn/CounterManager/trunk@7155 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/ivy.xml
+++ b/ivy.xml
@@ -37,5 +37,7 @@
         <!-- https://mvnrepository.com/artifact/com.github.tntim96/JSCover -->
         <dependency org="com.github.tntim96" name="JSCover" rev="2.0.10" conf="test->default;sources->sources;javadoc->javadoc" />
         
+        <!-- Avoid evicting modules when resolving dependencies -->
+        <conflict manager="all" />
     </dependencies>
 </ivy-module>
