--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -10,7 +10,7 @@ file.reference.mssql-jdbc-8.4.1.jre11.jar=lib\\mssql-jdbc-8.4.1.jre11.jar
 file.reference.selenium-support-3.141.59.jar=lib\\selenium-support-3.141.59.jar
 file.reference.slf4j-api-1.7.30.jar=lib/slf4j-api-1.7.30.jar
 file.reference.slf4j-simple-1.7.30.jar=lib/slf4j-simple-1.7.30.jar
-file.reference.vernacular-1.10.jar=lib\\vernacular-1.10.jar
+file.reference.vernacular-1.11.jar=lib/vernacular-1.11.jar
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -135,7 +135,7 @@ javac.classpath=\
     ${file.reference.jakarta.activation-1.2.2.jar}:\
     ${file.reference.javax.activation-api-1.2.0.jar}:\
     ${file.reference.mssql-jdbc-8.4.1.jre11.jar}:\
-    ${file.reference.vernacular-1.10.jar}
+    ${file.reference.vernacular-1.11.jar}
 build.classes.excludes=**/*.java,**/*.form,**/*.js,**/*.pas,**/*.html,**/*.css,**/*.js
 dist.jar=${dist.dir}/CounterManager.jar
 build.test.classes.dir=${build.dir}/test/classes
