--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,9 @@ file.reference.commons-io-2.6.jar=lib/commons-io-2.6.jar
 file.reference.commons-lang3-3.10.jar=lib/commons-lang3-3.10.jar
 file.reference.httpclient5-5.0.jar=lib/httpclient5-5.0.jar
 file.reference.httpcore5-5.0.jar=lib/httpcore5-5.0.jar
+file.reference.istack-commons-runtime-4.0.0.jar=lib/istack-commons-runtime-4.0.0.jar
+file.reference.jakarta.activation-2.0.0.jar=lib/jakarta.activation-2.0.0.jar
+file.reference.jaxb-runtime-3.0.0.jar=lib/jaxb-runtime-3.0.0.jar
 file.reference.JSCover-2.0.11-SNAPSHOT.jar=lib/JSCover-2.0.11-SNAPSHOT.jar
 file.reference.mssql-jdbc-8.4.1.jre11.jar=lib\\mssql-jdbc-8.4.1.jre11.jar
 file.reference.selenium-support-3.141.59.jar=lib\\selenium-support-3.141.59.jar
@@ -29,6 +32,7 @@ javac.test.classpath=\
     ${file.reference.closure-compiler-v20200628.jar}:\
     ${file.reference.JSCover-2.0.11-SNAPSHOT.jar}
 file.reference.junit-4.13.jar=lib/junit-4.13.jar
+javadoc.reference.jaxb-runtime-3.0.0.jar=lib/jaxb-runtime-3.0.0-javadoc.jar
 javadoc.reference.mssql-jdbc-8.4.1.jre11.jar=lib/mssql-jdbc-8.4.1.jre11-javadoc.jar
 source.reference.gson-2.8.6.jar=lib/gson-2.8.6-sources.jar
 dist.javadoc.dir=${dist.dir}/javadoc
@@ -41,7 +45,6 @@ debug.modulepath=${run.modulepath}
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 file.reference.byte-buddy-1.8.15.jar=lib\\byte-buddy-1.8.15.jar
 jar.archive.disabled=${jnlp.enabled}
-file.reference.jaxb-runtime-2.3.3.jar=lib\\jaxb-runtime-2.3.3.jar
 javac.source=11
 javadoc.use=true
 annotation.processing.enabled.in.editor=false
@@ -62,6 +65,7 @@ debug.test.modulepath=${run.test.modulepath}
 javadoc.windowtitle=
 file.reference.jaxb-api-2.3.1.jar=lib\\jaxb-api-2.3.1.jar
 file.reference.selenium-remote-driver-3.141.59.jar=lib\\selenium-remote-driver-3.141.59.jar
+source.reference.jaxb-runtime-3.0.0.jar=lib/jaxb-runtime-3.0.0-sources.jar
 source.reference.JSCover-2.0.11-SNAPSHOT.jar=lib/JSCover-2.0.11-SNAPSHOT-sources.jar
 source.reference.mssql-jdbc-8.4.1.jre11.jar=lib/mssql-jdbc-8.4.1.jre11-sources.jar
 test.test.dir=test
@@ -113,7 +117,6 @@ annotation.processing.processors.list=
 javac.deprecation=false
 jlink.launcher=false
 file.reference.hamcrest-core-1.3.jar=lib/hamcrest-core-1.3.jar
-file.reference.istack-commons-runtime-3.0.11.jar=lib\\istack-commons-runtime-3.0.11.jar
 jnlp.mixed.code=default
 jlink.launcher.name=CounterManager
 build.generated.sources.dir=${build.dir}/generated-sources
@@ -130,10 +133,10 @@ javac.classpath=\
     ${file.reference.gson-2.8.6.jar}:\
     ${file.reference.ini4j-0.5.4.jar}:\
     ${file.reference.jaxb-api-2.3.1.jar}:\
-    ${file.reference.jaxb-runtime-2.3.3.jar}:\
-    ${file.reference.istack-commons-runtime-3.0.11.jar}:\
-    ${file.reference.jakarta.activation-1.2.2.jar}:\
+    ${file.reference.jaxb-runtime-3.0.0.jar}:\
+    ${file.reference.istack-commons-runtime-4.0.0.jar}:\
     ${file.reference.javax.activation-api-1.2.0.jar}:\
+    ${file.reference.jakarta.activation-2.0.0.jar}:\
     ${file.reference.mssql-jdbc-8.4.1.jre11.jar}:\
     ${file.reference.vernacular-1.11.jar}
 build.classes.excludes=**/*.java,**/*.form,**/*.js,**/*.pas,**/*.html,**/*.css,**/*.js
@@ -141,7 +144,6 @@ dist.jar=${dist.dir}/CounterManager.jar
 build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 file.reference.okhttp-3.11.0.jar=lib\\okhttp-3.11.0.jar
-file.reference.jakarta.activation-1.2.2.jar=lib\\jakarta.activation-1.2.2.jar
 file.reference.gson-2.8.6.jar=lib\\gson-2.8.6.jar
 build.generated.dir=${build.dir}/generated
 application.args=
