Doesn't work with jaxb-runtime 3.0.0 yet, so go back to 2.3.1
git-svn-id: https://localhost/svn/CounterManager/trunk@7261 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -7,7 +7,7 @@ file.reference.httpclient5-5.0.jar=lib/httpclient5-5.0.jar
 file.reference.httpcore5-5.0.jar=lib/httpcore5-5.0.jar
 file.reference.istack-commons-runtime-4.0.0.jar=lib/istack-commons-runtime-4.0.0.jar
 file.reference.jakarta.activation-2.0.0.jar=lib/jakarta.activation-2.0.0.jar
-file.reference.jaxb-runtime-3.0.0.jar=lib/jaxb-runtime-3.0.0.jar
+file.reference.jaxb-runtime-2.3.1.jar=lib/jaxb-runtime-2.3.1.jar
 file.reference.JSCover-2.0.11-SNAPSHOT.jar=lib/JSCover-2.0.11-SNAPSHOT.jar
 file.reference.mssql-jdbc-8.4.1.jre11.jar=lib\\mssql-jdbc-8.4.1.jre11.jar
 file.reference.selenium-support-3.141.59.jar=lib\\selenium-support-3.141.59.jar
@@ -32,7 +32,6 @@ javac.test.classpath=\
     ${file.reference.closure-compiler-v20200628.jar}:\
     ${file.reference.JSCover-2.0.11-SNAPSHOT.jar}
 file.reference.junit-4.13.jar=lib/junit-4.13.jar
-javadoc.reference.jaxb-runtime-3.0.0.jar=lib/jaxb-runtime-3.0.0-javadoc.jar
 javadoc.reference.mssql-jdbc-8.4.1.jre11.jar=lib/mssql-jdbc-8.4.1.jre11-javadoc.jar
 source.reference.gson-2.8.6.jar=lib/gson-2.8.6-sources.jar
 dist.javadoc.dir=${dist.dir}/javadoc
@@ -65,7 +64,6 @@ debug.test.modulepath=${run.test.modulepath}
 javadoc.windowtitle=
 file.reference.jaxb-api-2.3.1.jar=lib\\jaxb-api-2.3.1.jar
 file.reference.selenium-remote-driver-3.141.59.jar=lib\\selenium-remote-driver-3.141.59.jar
-source.reference.jaxb-runtime-3.0.0.jar=lib/jaxb-runtime-3.0.0-sources.jar
 source.reference.JSCover-2.0.11-SNAPSHOT.jar=lib/JSCover-2.0.11-SNAPSHOT-sources.jar
 source.reference.mssql-jdbc-8.4.1.jre11.jar=lib/mssql-jdbc-8.4.1.jre11-sources.jar
 test.test.dir=test
@@ -133,12 +131,12 @@ javac.classpath=\
     ${file.reference.gson-2.8.6.jar}:\
     ${file.reference.ini4j-0.5.4.jar}:\
     ${file.reference.jaxb-api-2.3.1.jar}:\
-    ${file.reference.jaxb-runtime-3.0.0.jar}:\
     ${file.reference.istack-commons-runtime-4.0.0.jar}:\
     ${file.reference.javax.activation-api-1.2.0.jar}:\
     ${file.reference.jakarta.activation-2.0.0.jar}:\
     ${file.reference.mssql-jdbc-8.4.1.jre11.jar}:\
-    ${file.reference.vernacular-1.11.jar}
+    ${file.reference.vernacular-1.11.jar}:\
+    ${file.reference.jaxb-runtime-2.3.1.jar}
 build.classes.excludes=**/*.java,**/*.form,**/*.js,**/*.pas,**/*.html,**/*.css,**/*.js
 dist.jar=${dist.dir}/CounterManager.jar
 build.test.classes.dir=${build.dir}/test/classes
