--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,7 +5,7 @@ file.reference.commons-io-2.6.jar=lib/commons-io-2.6.jar
 file.reference.commons-lang3-3.10.jar=lib/commons-lang3-3.10.jar
 file.reference.httpclient5-5.0.jar=lib/httpclient5-5.0.jar
 file.reference.httpcore5-5.0.jar=lib/httpcore5-5.0.jar
-file.reference.istack-commons-runtime-4.0.0.jar=lib/istack-commons-runtime-4.0.0.jar
+file.reference.istack-commons-runtime-3.0.7.jar=lib/istack-commons-runtime-3.0.7.jar
 file.reference.jakarta.activation-2.0.0.jar=lib/jakarta.activation-2.0.0.jar
 file.reference.jaxb-runtime-2.3.1.jar=lib/jaxb-runtime-2.3.1.jar
 file.reference.JSCover-2.0.11-SNAPSHOT.jar=lib/JSCover-2.0.11-SNAPSHOT.jar
@@ -32,6 +32,7 @@ javac.test.classpath=\
     ${file.reference.closure-compiler-v20200628.jar}:\
     ${file.reference.JSCover-2.0.11-SNAPSHOT.jar}
 file.reference.junit-4.13.jar=lib/junit-4.13.jar
+javadoc.reference.junit-4.13.jar=lib/junit-4.13-javadoc.jar
 javadoc.reference.mssql-jdbc-8.4.1.jre11.jar=lib/mssql-jdbc-8.4.1.jre11-javadoc.jar
 source.reference.gson-2.8.6.jar=lib/gson-2.8.6-sources.jar
 dist.javadoc.dir=${dist.dir}/javadoc
@@ -65,6 +66,7 @@ javadoc.windowtitle=
 file.reference.jaxb-api-2.3.1.jar=lib\\jaxb-api-2.3.1.jar
 file.reference.selenium-remote-driver-3.141.59.jar=lib\\selenium-remote-driver-3.141.59.jar
 source.reference.JSCover-2.0.11-SNAPSHOT.jar=lib/JSCover-2.0.11-SNAPSHOT-sources.jar
+source.reference.junit-4.13.jar=lib/junit-4.13-sources.jar
 source.reference.mssql-jdbc-8.4.1.jre11.jar=lib/mssql-jdbc-8.4.1.jre11-sources.jar
 test.test.dir=test
 javadoc.reference.ini4j-0.5.4.jar=lib/ini4j-0.5.4-javadoc.jar
@@ -131,8 +133,8 @@ javac.classpath=\
     ${file.reference.gson-2.8.6.jar}:\
     ${file.reference.ini4j-0.5.4.jar}:\
     ${file.reference.jaxb-api-2.3.1.jar}:\
-    ${file.reference.istack-commons-runtime-4.0.0.jar}:\
     ${file.reference.javax.activation-api-1.2.0.jar}:\
+    ${file.reference.istack-commons-runtime-3.0.7.jar}:\
     ${file.reference.jakarta.activation-2.0.0.jar}:\
     ${file.reference.mssql-jdbc-8.4.1.jre11.jar}:\
     ${file.reference.vernacular-1.11.jar}:\
