--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -6,7 +6,6 @@ file.reference.commons-lang3-3.10.jar=lib/commons-lang3-3.10.jar
 file.reference.httpclient5-5.0.jar=lib/httpclient5-5.0.jar
 file.reference.httpcore5-5.0.jar=lib/httpcore5-5.0.jar
 file.reference.istack-commons-runtime-3.0.7.jar=lib/istack-commons-runtime-3.0.7.jar
-file.reference.jakarta.activation-2.0.0.jar=lib/jakarta.activation-2.0.0.jar
 file.reference.jaxb-runtime-2.3.1.jar=lib/jaxb-runtime-2.3.1.jar
 file.reference.JSCover-2.0.11-SNAPSHOT.jar=lib/JSCover-2.0.11-SNAPSHOT.jar
 file.reference.mssql-jdbc-8.4.1.jre11.jar=lib\\mssql-jdbc-8.4.1.jre11.jar
@@ -95,7 +94,7 @@ file.reference.okio-1.14.0.jar=lib\\okio-1.14.0.jar
 javac.processorpath=\
     ${javac.classpath}
 test.src.dir=test
-file.reference.javax.activation-api-1.2.0.jar=lib\\javax.activation-api-1.2.0.jar
+file.reference.javax.activation-api-1.2.0.jar=lib/javax.activation-api-1.2.0.jar
 run.modulepath=\
     ${javac.modulepath}
 jnlp.codebase.type=no.codebase
@@ -135,8 +134,8 @@ javac.classpath=\
     ${file.reference.jaxb-api-2.3.1.jar}:\
     ${file.reference.javax.activation-api-1.2.0.jar}:\
     ${file.reference.istack-commons-runtime-3.0.7.jar}:\
-    ${file.reference.jakarta.activation-2.0.0.jar}:\
     ${file.reference.mssql-jdbc-8.4.1.jre11.jar}:\
+    ${file.reference.javax.activation-api-1.2.0.jar}:\
     ${file.reference.vernacular-1.11.jar}:\
     ${file.reference.jaxb-runtime-2.3.1.jar}
 build.classes.excludes=**/*.java,**/*.form,**/*.js,**/*.pas,**/*.html,**/*.css,**/*.js
