--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -8,7 +8,7 @@ file.reference.httpcore5-5.0.jar=lib/httpcore5-5.0.jar
 file.reference.istack-commons-runtime-3.0.7.jar=lib/istack-commons-runtime-3.0.7.jar
 file.reference.jaxb-runtime-2.3.1.jar=lib/jaxb-runtime-2.3.1.jar
 file.reference.JSCover-2.0.11-SNAPSHOT.jar=lib/JSCover-2.0.11-SNAPSHOT.jar
-file.reference.mssql-jdbc-8.4.1.jre11.jar=lib\\mssql-jdbc-8.4.1.jre11.jar
+file.reference.mssql-jdbc-9.2.0.jre11.jar=lib/mssql-jdbc-9.2.0.jre11.jar
 file.reference.selenium-support-3.141.59.jar=lib\\selenium-support-3.141.59.jar
 file.reference.slf4j-api-1.7.30.jar=lib/slf4j-api-1.7.30.jar
 file.reference.slf4j-simple-1.7.30.jar=lib/slf4j-simple-1.7.30.jar
@@ -32,7 +32,7 @@ javac.test.classpath=\
     ${file.reference.JSCover-2.0.11-SNAPSHOT.jar}
 file.reference.junit-4.13.jar=lib/junit-4.13.jar
 javadoc.reference.junit-4.13.jar=lib/junit-4.13-javadoc.jar
-javadoc.reference.mssql-jdbc-8.4.1.jre11.jar=lib/mssql-jdbc-8.4.1.jre11-javadoc.jar
+javadoc.reference.mssql-jdbc-9.2.0.jre11.jar=lib/mssql-jdbc-9.2.0.jre11-javadoc.jar
 source.reference.gson-2.8.6.jar=lib/gson-2.8.6-sources.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 jnlp.offline-allowed=false
@@ -66,7 +66,7 @@ file.reference.jaxb-api-2.3.1.jar=lib\\jaxb-api-2.3.1.jar
 file.reference.selenium-remote-driver-3.141.59.jar=lib\\selenium-remote-driver-3.141.59.jar
 source.reference.JSCover-2.0.11-SNAPSHOT.jar=lib/JSCover-2.0.11-SNAPSHOT-sources.jar
 source.reference.junit-4.13.jar=lib/junit-4.13-sources.jar
-source.reference.mssql-jdbc-8.4.1.jre11.jar=lib/mssql-jdbc-8.4.1.jre11-sources.jar
+source.reference.mssql-jdbc-9.2.0.jre11.jar=lib/mssql-jdbc-9.2.0.jre11-sources.jar
 test.test.dir=test
 javadoc.reference.ini4j-0.5.4.jar=lib/ini4j-0.5.4-javadoc.jar
 file.reference.RXTXcomm.jar=lib/RXTXcomm.jar
@@ -134,10 +134,10 @@ javac.classpath=\
     ${file.reference.jaxb-api-2.3.1.jar}:\
     ${file.reference.javax.activation-api-1.2.0.jar}:\
     ${file.reference.istack-commons-runtime-3.0.7.jar}:\
-    ${file.reference.mssql-jdbc-8.4.1.jre11.jar}:\
     ${file.reference.javax.activation-api-1.2.0.jar}:\
     ${file.reference.vernacular-1.11.jar}:\
-    ${file.reference.jaxb-runtime-2.3.1.jar}
+    ${file.reference.jaxb-runtime-2.3.1.jar}:\
+    ${file.reference.mssql-jdbc-9.2.0.jre11.jar}
 build.classes.excludes=**/*.java,**/*.form,**/*.js,**/*.pas,**/*.html,**/*.css,**/*.js
 dist.jar=${dist.dir}/CounterManager.jar
 build.test.classes.dir=${build.dir}/test/classes
