--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,12 +3,13 @@ excludes=countermanager/liveticker/ttm/TTMPrivate.java
 file.reference.closure-compiler-v20200628.jar=lib\\closure-compiler-v20200628.jar
 file.reference.commons-io-2.6.jar=lib/commons-io-2.6.jar
 file.reference.commons-lang3-3.10.jar=lib/commons-lang3-3.10.jar
+file.reference.gson-2.8.8.jar=lib/gson-2.8.8.jar
 file.reference.httpclient5-5.0.jar=lib/httpclient5-5.0.jar
 file.reference.httpcore5-5.0.jar=lib/httpcore5-5.0.jar
 file.reference.istack-commons-runtime-3.0.7.jar=lib/istack-commons-runtime-3.0.7.jar
 file.reference.jaxb-runtime-2.3.1.jar=lib/jaxb-runtime-2.3.1.jar
-file.reference.JSCover-2.0.11-SNAPSHOT.jar=lib/JSCover-2.0.11-SNAPSHOT.jar
-file.reference.mssql-jdbc-9.2.0.jre11.jar=lib/mssql-jdbc-9.2.0.jre11.jar
+file.reference.JSCover-2.0.13-SNAPSHOT.jar=lib/JSCover-2.0.13-SNAPSHOT.jar
+file.reference.mssql-jdbc-9.4.0.jre11.jar=lib/mssql-jdbc-9.4.0.jre11.jar
 file.reference.selenium-support-3.141.59.jar=lib\\selenium-support-3.141.59.jar
 file.reference.slf4j-api-1.7.30.jar=lib/slf4j-api-1.7.30.jar
 file.reference.slf4j-simple-1.7.30.jar=lib/slf4j-simple-1.7.30.jar
@@ -29,14 +30,15 @@ javac.test.classpath=\
     ${file.reference.selenium-remote-driver-3.141.59.jar}:\
     ${file.reference.selenium-support-3.141.59.jar}:\
     ${file.reference.closure-compiler-v20200628.jar}:\
-    ${file.reference.JSCover-2.0.11-SNAPSHOT.jar}
+    ${file.reference.JSCover-2.0.13-SNAPSHOT.jar}
 file.reference.junit-4.13.jar=lib/junit-4.13.jar
+javadoc.reference.gson-2.8.8.jar=lib/gson-2.8.8-javadoc.jar
 javadoc.reference.junit-4.13.jar=lib/junit-4.13-javadoc.jar
-javadoc.reference.mssql-jdbc-9.2.0.jre11.jar=lib/mssql-jdbc-9.2.0.jre11-javadoc.jar
-source.reference.gson-2.8.6.jar=lib/gson-2.8.6-sources.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+javadoc.reference.mssql-jdbc-9.4.0.jre11.jar=lib/mssql-jdbc-9.4.0.jre11-javadoc.jar
 jnlp.offline-allowed=false
 jnlp.signing.keystore=
+source.reference.gson-2.8.8.jar=lib/gson-2.8.8-sources.jar
 source.reference.ini4j-0.5.4.jar=lib/ini4j-0.5.4-sources.jar
 jnlp.signing.alias=
 annotation.processing.enabled=true
@@ -48,7 +50,6 @@ javac.source=11
 javadoc.use=true
 annotation.processing.enabled.in.editor=false
 javadoc.notree=false
-javadoc.reference.gson-2.8.6.jar=lib/gson-2.8.6-javadoc.jar
 javadoc.reference.redstone.jar=F\:\\tools\\java\\redstone\\src
 application.vendor=Administrator
 file.reference.guava-25.0-jre.jar=lib\\guava-25.0-jre.jar
@@ -64,9 +65,9 @@ debug.test.modulepath=${run.test.modulepath}
 javadoc.windowtitle=
 file.reference.jaxb-api-2.3.1.jar=lib\\jaxb-api-2.3.1.jar
 file.reference.selenium-remote-driver-3.141.59.jar=lib\\selenium-remote-driver-3.141.59.jar
-source.reference.JSCover-2.0.11-SNAPSHOT.jar=lib/JSCover-2.0.11-SNAPSHOT-sources.jar
+source.reference.JSCover-2.0.13-SNAPSHOT.jar=lib/JSCover-2.0.13-SNAPSHOT-sources.jar
 source.reference.junit-4.13.jar=lib/junit-4.13-sources.jar
-source.reference.mssql-jdbc-9.2.0.jre11.jar=lib/mssql-jdbc-9.2.0.jre11-sources.jar
+source.reference.mssql-jdbc-9.4.0.jre11.jar=lib/mssql-jdbc-9.4.0.jre11-sources.jar
 test.test.dir=test
 javadoc.reference.ini4j-0.5.4.jar=lib/ini4j-0.5.4-javadoc.jar
 file.reference.RXTXcomm.jar=lib/RXTXcomm.jar
@@ -129,21 +130,20 @@ javac.classpath=\
     ${file.reference.redstone.jar}:\
     ${file.reference.edtftpj.jar}:\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.gson-2.8.6.jar}:\
     ${file.reference.ini4j-0.5.4.jar}:\
+    ${file.reference.gson-2.8.8.jar}:\
     ${file.reference.jaxb-api-2.3.1.jar}:\
     ${file.reference.javax.activation-api-1.2.0.jar}:\
     ${file.reference.istack-commons-runtime-3.0.7.jar}:\
     ${file.reference.javax.activation-api-1.2.0.jar}:\
     ${file.reference.vernacular-1.11.jar}:\
     ${file.reference.jaxb-runtime-2.3.1.jar}:\
-    ${file.reference.mssql-jdbc-9.2.0.jre11.jar}
+    ${file.reference.mssql-jdbc-9.4.0.jre11.jar}
 build.classes.excludes=**/*.java,**/*.form,**/*.js,**/*.pas,**/*.html,**/*.css,**/*.js
 dist.jar=${dist.dir}/CounterManager.jar
 build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 file.reference.okhttp-3.11.0.jar=lib\\okhttp-3.11.0.jar
-file.reference.gson-2.8.6.jar=lib\\gson-2.8.6.jar
 build.generated.dir=${build.dir}/generated
 application.args=
 application.title=CounterManager
