--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -14,6 +14,7 @@ file.reference.selenium-support-3.141.59.jar=lib\\selenium-support-3.141.59.jar
 file.reference.slf4j-api-1.7.30.jar=lib/slf4j-api-1.7.30.jar
 file.reference.slf4j-simple-1.7.30.jar=lib/slf4j-simple-1.7.30.jar
 file.reference.vernacular-1.11.jar=lib/vernacular-1.11.jar
+file.reference.webdrivermanager-4.4.3.jar=lib/webdrivermanager-4.4.3.jar
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -24,7 +25,7 @@ javac.test.classpath=\
     ${file.reference.okio-1.14.0.jar}:\
     ${file.reference.junit-4.13.jar}:\
     ${file.reference.hamcrest-core-1.3.jar}:\
-    ${file.reference.webdrivermanager-4.0.0.jar}:\
+    ${file.reference.webdrivermanager-4.4.3.jar}:\
     ${file.reference.selenium-api-3.141.59.jar}:\
     ${file.reference.selenium-chrome-driver-3.141.59.jar}:\
     ${file.reference.selenium-remote-driver-3.141.59.jar}:\
@@ -36,6 +37,7 @@ javadoc.reference.gson-2.8.8.jar=lib/gson-2.8.8-javadoc.jar
 javadoc.reference.junit-4.13.jar=lib/junit-4.13-javadoc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 javadoc.reference.mssql-jdbc-9.4.0.jre11.jar=lib/mssql-jdbc-9.4.0.jre11-javadoc.jar
+javadoc.reference.webdrivermanager-4.4.3.jar=lib/webdrivermanager-4.4.3-javadoc.jar
 jnlp.offline-allowed=false
 jnlp.signing.keystore=
 source.reference.gson-2.8.8.jar=lib/gson-2.8.8-sources.jar
@@ -68,6 +70,7 @@ file.reference.selenium-remote-driver-3.141.59.jar=lib\\selenium-remote-driver-3
 source.reference.JSCover-2.0.13-SNAPSHOT.jar=lib/JSCover-2.0.13-SNAPSHOT-sources.jar
 source.reference.junit-4.13.jar=lib/junit-4.13-sources.jar
 source.reference.mssql-jdbc-9.4.0.jre11.jar=lib/mssql-jdbc-9.4.0.jre11-sources.jar
+source.reference.webdrivermanager-4.4.3.jar=lib/webdrivermanager-4.4.3-sources.jar
 test.test.dir=test
 javadoc.reference.ini4j-0.5.4.jar=lib/ini4j-0.5.4-javadoc.jar
 file.reference.RXTXcomm.jar=lib/RXTXcomm.jar
@@ -87,7 +90,6 @@ manifest.file=manifest.mf
 javadoc.html5=false
 meta.inf.dir=${src.dir}/META-INF
 javac.modulepath=
-file.reference.webdrivermanager-4.0.0.jar=lib\\webdrivermanager-4.0.0.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
