Switch default JDK to 11
git-svn-id: https://localhost/svn/CounterManager/trunk@7871 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -85,7 +85,7 @@ debug.test.classpath=${run.test.classpath}
 javac.external.vm=false
 javac.target=11
 jnlp.signing=
-platform.active=default_platform
+platform.active=JDK_11
 manifest.file=manifest.mf
 javadoc.html5=false
 meta.inf.dir=${src.dir}/META-INF
