--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -10,6 +10,8 @@ file.reference.istack-commons-runtime-3.0.7.jar=lib/istack-commons-runtime-3.0.7
 file.reference.jaxb-runtime-2.3.1.jar=lib/jaxb-runtime-2.3.1.jar
 file.reference.JSCover-2.0.13-SNAPSHOT.jar=lib/JSCover-2.0.13-SNAPSHOT.jar
 file.reference.mssql-jdbc-9.4.0.jre11.jar=lib/mssql-jdbc-9.4.0.jre11.jar
+file.reference.rhino-1.7.13.jar=lib/rhino-1.7.13.jar
+file.reference.rhino-engine-1.7.13.jar=lib/rhino-engine-1.7.13.jar
 file.reference.selenium-support-3.141.59.jar=lib\\selenium-support-3.141.59.jar
 file.reference.slf4j-api-1.7.30.jar=lib/slf4j-api-1.7.30.jar
 file.reference.slf4j-simple-1.7.30.jar=lib/slf4j-simple-1.7.30.jar
@@ -37,6 +39,8 @@ javadoc.reference.gson-2.8.8.jar=lib/gson-2.8.8-javadoc.jar
 javadoc.reference.junit-4.13.jar=lib/junit-4.13-javadoc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 javadoc.reference.mssql-jdbc-9.4.0.jre11.jar=lib/mssql-jdbc-9.4.0.jre11-javadoc.jar
+javadoc.reference.rhino-1.7.13.jar=lib/rhino-1.7.13-javadoc.jar
+javadoc.reference.rhino-engine-1.7.13.jar=lib/rhino-engine-1.7.13-javadoc.jar
 javadoc.reference.webdrivermanager-4.4.3.jar=lib/webdrivermanager-4.4.3-javadoc.jar
 jnlp.offline-allowed=false
 jnlp.signing.keystore=
@@ -70,6 +74,8 @@ file.reference.selenium-remote-driver-3.141.59.jar=lib\\selenium-remote-driver-3
 source.reference.JSCover-2.0.13-SNAPSHOT.jar=lib/JSCover-2.0.13-SNAPSHOT-sources.jar
 source.reference.junit-4.13.jar=lib/junit-4.13-sources.jar
 source.reference.mssql-jdbc-9.4.0.jre11.jar=lib/mssql-jdbc-9.4.0.jre11-sources.jar
+source.reference.rhino-1.7.13.jar=lib/rhino-1.7.13-sources.jar
+source.reference.rhino-engine-1.7.13.jar=lib/rhino-engine-1.7.13-sources.jar
 source.reference.webdrivermanager-4.4.3.jar=lib/webdrivermanager-4.4.3-sources.jar
 test.test.dir=test
 javadoc.reference.ini4j-0.5.4.jar=lib/ini4j-0.5.4-javadoc.jar
@@ -140,7 +146,9 @@ javac.classpath=\
     ${file.reference.javax.activation-api-1.2.0.jar}:\
     ${file.reference.vernacular-1.11.jar}:\
     ${file.reference.jaxb-runtime-2.3.1.jar}:\
-    ${file.reference.mssql-jdbc-9.4.0.jre11.jar}
+    ${file.reference.mssql-jdbc-9.4.0.jre11.jar}:\
+    ${file.reference.rhino-engine-1.7.13.jar}:\
+    ${file.reference.rhino-1.7.13.jar}
 build.classes.excludes=**/*.java,**/*.form,**/*.js,**/*.pas,**/*.html,**/*.css,**/*.js
 dist.jar=${dist.dir}/CounterManager.jar
 build.test.classes.dir=${build.dir}/test/classes
