After load configuration also load liveticker settings
git-svn-id: https://localhost/svn/CounterManager/trunk@8091 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/gui/resources/CounterManager.properties
+++ b/src/countermanager/gui/resources/CounterManager.properties
@@ -191,3 +191,4 @@ setAllActiveMenuItem=Set All Active
 largeFontMenuItem=Large Font
 smsMenuItem=SMS Alerts
 Scripts\:=Scripts:
+configurationFileFilter=Configurations (*.ini)
