--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -91,7 +91,7 @@ debug.test.classpath=${run.test.classpath}
 javac.external.vm=false
 javac.target=11
 jnlp.signing=
-platform.active=JDK_11
+platform.active=default_platform
 manifest.file=manifest.mf
 javadoc.html5=false
 meta.inf.dir=${src.dir}/META-INF
