--- a/build.xml
+++ b/build.xml
@@ -111,12 +111,15 @@
         <!-- Native authentication only with 64 bit, 32 bit have to use SQL authentication
             <copy file="lib/x86/sqljdbc_auth.dll" todir="${dist.dir}/x86"/> 
         -->
-        <copy file="lib/mssql-jdbc_auth-9.4.0.x64.dll" todir="${dist.dir}"/>
-        <copy file="lib/rxtxSerial.dll" todir="${dist.dir}"/>
+        <copy file="lib/mssql-jdbc_auth-12.2.0.x64.dll" todir="${dist.dir}"/>
+        <!-- Copy auth dll to cwd for debugging -->        
+        <copy file="lib/mssql-jdbc_auth-12.2.0.x64.dll" todir="${work.dir}"/>
+
         <copy todir="${dist.dir}/http">
             <fileset dir="${src.dir}/countermanager/http" includes="**/*.js **/*.css **/*.html **/*.gif **/*.png **/*.svg **/*.jpg"/>
         </copy>
         <copy file="CounterManager.ico" todir="${dist.dir}"/>
+
     </target>
     
     <target depends="init" name="-do-clean">
