--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,10 @@
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.expand-tabs=true
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.indent-shift-width=4
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.spaces-per-tab=4
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.tab-size=8
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-limit-width=80
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-line-wrap=none
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=project
 #Sat Jun 27 10:47:05 CEST 2020
 excludes=countermanager/liveticker/ttm/TTMPrivate.java
 file.reference.commons-io-2.8.0.jar=lib/commons-io-2.8.0.jar
@@ -8,7 +15,7 @@ file.reference.httpcore5-5.0.2.jar=lib/httpcore5-5.0.2.jar
 file.reference.istack-commons-runtime-3.0.7.jar=lib/istack-commons-runtime-3.0.7.jar
 file.reference.jaxb-runtime-2.3.1.jar=lib/jaxb-runtime-2.3.1.jar
 file.reference.JSCover-2.0.13-SNAPSHOT.jar=lib/JSCover-2.0.13-SNAPSHOT.jar
-file.reference.mssql-jdbc-9.4.0.jre11.jar=lib/mssql-jdbc-9.4.0.jre11.jar
+file.reference.mssql-jdbc-12.2.0.jre11.jar=lib/mssql-jdbc-12.2.0.jre11.jar
 file.reference.rhino-1.7.14.jar=lib/rhino-1.7.14.jar
 file.reference.rhino-engine-1.7.14.jar=lib/rhino-engine-1.7.14.jar
 file.reference.selenium-support-3.141.59.jar=lib\\selenium-support-3.141.59.jar
@@ -36,7 +43,7 @@ file.reference.junit-4.13.jar=lib/junit-4.13.jar
 javadoc.reference.gson-2.9.0.jar=lib/gson-2.9.0-javadoc.jar
 javadoc.reference.junit-4.13.jar=lib/junit-4.13-javadoc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-javadoc.reference.mssql-jdbc-9.4.0.jre11.jar=lib/mssql-jdbc-9.4.0.jre11-javadoc.jar
+javadoc.reference.mssql-jdbc-12.2.0.jre11.jar=lib/mssql-jdbc-12.2.0.jre11-javadoc.jar
 javadoc.reference.rhino-1.7.14.jar=lib/rhino-1.7.14-javadoc.jar
 javadoc.reference.rhino-engine-1.7.14.jar=lib/rhino-engine-1.7.13-javadoc.jar
 javadoc.reference.webdrivermanager-4.4.3.jar=lib/webdrivermanager-4.4.3-javadoc.jar
@@ -71,7 +78,7 @@ file.reference.jaxb-api-2.3.1.jar=lib\\jaxb-api-2.3.1.jar
 file.reference.selenium-remote-driver-3.141.59.jar=lib\\selenium-remote-driver-3.141.59.jar
 source.reference.JSCover-2.0.13-SNAPSHOT.jar=lib/JSCover-2.0.13-SNAPSHOT-sources.jar
 source.reference.junit-4.13.jar=lib/junit-4.13-sources.jar
-source.reference.mssql-jdbc-9.4.0.jre11.jar=lib/mssql-jdbc-9.4.0.jre11-sources.jar
+source.reference.mssql-jdbc-12.2.0.jre11.jar=lib/mssql-jdbc-12.2.0.jre11-sources.jar
 source.reference.rhino-1.7.14.jar=lib/rhino-1.7.14-sources.jar
 source.reference.rhino-engine-1.7.14.jar=lib/rhino-engine-1.7.14-sources.jar
 source.reference.webdrivermanager-4.4.3.jar=lib/webdrivermanager-4.4.3-sources.jar
@@ -144,7 +151,7 @@ javac.classpath=\
     ${file.reference.javax.activation-api-1.2.0.jar}:\
     ${file.reference.jaxb-runtime-2.3.1.jar}:\
     ${file.reference.vernacular-1.14.jar}:\
-    ${file.reference.mssql-jdbc-9.4.0.jre11.jar}:\
+    ${file.reference.mssql-jdbc-12.2.0.jre11.jar}:\
     ${file.reference.rhino-engine-1.7.14.jar}:\
     ${file.reference.rhino-1.7.14.jar}
 build.classes.excludes=**/*.java,**/*.form,**/*.js,**/*.pas,**/*.html,**/*.css,**/*.js
