Update a.o. sftp to edtftpj-pro-7.6.0
git-svn-id: https://localhost/svn/CounterManager/trunk@8891 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/ivy.xml
+++ b/ivy.xml
@@ -39,7 +39,7 @@
         <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency org="junit" name="junit" rev="4.13" conf="test->default;sources->sources;javadoc->javadoc" />
         <!-- https://mvnrepository.com/artifact/com.github.tntim96/JSCover -->
-        <!-- <dependency org="com.github.tntim96" name="JSCover" rev="2.0.12" conf="test->default;sources->sources;javadoc->javadoc" /> -->
+        <dependency org="com.github.tntim96" name="JSCover" rev="2.0.19" conf="test->default;sources->sources;javadoc->javadoc" />
         
         <!-- Avoid evicting modules when resolving dependencies -->
         <conflict manager="all" />
