--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -14,7 +14,7 @@ file.reference.httpclient5-5.0.3.jar=lib/httpclient5-5.0.3.jar
 file.reference.httpcore5-5.0.2.jar=lib/httpcore5-5.0.2.jar
 file.reference.istack-commons-runtime-3.0.7.jar=lib/istack-commons-runtime-3.0.7.jar
 file.reference.jaxb-runtime-2.3.1.jar=lib/jaxb-runtime-2.3.1.jar
-file.reference.JSCover-2.0.13-SNAPSHOT.jar=lib/JSCover-2.0.13-SNAPSHOT.jar
+file.reference.JSCover-2.0.19.jar=lib/JSCover-2.0.19.jar
 file.reference.mssql-jdbc-12.2.0.jre11.jar=lib/mssql-jdbc-12.2.0.jre11.jar
 file.reference.rhino-1.7.14.jar=lib/rhino-1.7.14.jar
 file.reference.rhino-engine-1.7.14.jar=lib/rhino-engine-1.7.14.jar
@@ -38,9 +38,10 @@ javac.test.classpath=\
     ${file.reference.selenium-chrome-driver-3.141.59.jar}:\
     ${file.reference.selenium-remote-driver-3.141.59.jar}:\
     ${file.reference.selenium-support-3.141.59.jar}:\
-    ${file.reference.JSCover-2.0.13-SNAPSHOT.jar}
+    ${file.reference.JSCover-2.0.19.jar}
 file.reference.junit-4.13.jar=lib/junit-4.13.jar
 javadoc.reference.gson-2.9.0.jar=lib/gson-2.9.0-javadoc.jar
+javadoc.reference.JSCover-2.0.19.jar=lib/JSCover-2.0.19-javadoc.jar
 javadoc.reference.junit-4.13.jar=lib/junit-4.13-javadoc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 javadoc.reference.mssql-jdbc-12.2.0.jre11.jar=lib/mssql-jdbc-12.2.0.jre11-javadoc.jar
@@ -76,7 +77,7 @@ debug.test.modulepath=${run.test.modulepath}
 javadoc.windowtitle=
 file.reference.jaxb-api-2.3.1.jar=lib\\jaxb-api-2.3.1.jar
 file.reference.selenium-remote-driver-3.141.59.jar=lib\\selenium-remote-driver-3.141.59.jar
-source.reference.JSCover-2.0.13-SNAPSHOT.jar=lib/JSCover-2.0.13-SNAPSHOT-sources.jar
+source.reference.JSCover-2.0.19.jar=lib/JSCover-2.0.19-sources.jar
 source.reference.junit-4.13.jar=lib/junit-4.13-sources.jar
 source.reference.mssql-jdbc-12.2.0.jre11.jar=lib/mssql-jdbc-12.2.0.jre11-sources.jar
 source.reference.rhino-1.7.14.jar=lib/rhino-1.7.14-sources.jar
