--- a/build.xml
+++ b/build.xml
@@ -104,16 +104,16 @@
     <target name="-pre-compile">
         <ivy:retrieve />
         <ivy:dependencytree />
-        <ivy:checkdepsupdate conf="compile" />
+        <ivy:checkdepsupdate revisionToCheck="latest.release" conf="compile" />
     </target>    
     
     <target name="-post-compile">
         <!-- Native authentication only with 64 bit, 32 bit have to use SQL authentication
             <copy file="lib/x86/sqljdbc_auth.dll" todir="${dist.dir}/x86"/> 
         -->
-        <copy file="lib/mssql-jdbc_auth-12.2.0.x64.dll" todir="${dist.dir}"/>
+        <copy file="lib/mssql-jdbc_auth-12.8.0.x64.dll" todir="${dist.dir}"/>
         <!-- Copy auth dll to cwd for debugging -->        
-        <copy file="lib/mssql-jdbc_auth-12.2.0.x64.dll" todir="${work.dir}"/>
+        <copy file="lib/mssql-jdbc_auth-12.8.0.x64.dll" todir="${work.dir}"/>
 
         <copy todir="${dist.dir}/http">
             <fileset dir="${src.dir}/countermanager/http" includes="**/*.js **/*.css **/*.html **/*.gif **/*.png **/*.svg **/*.jpg"/>
