Check for updates
git-svn-id: https://localhost/svn/CounterManager/trunk@9314 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/gui/resources/CounterManager.properties
+++ b/src/countermanager/gui/resources/CounterManager.properties
@@ -192,3 +192,4 @@ largeFontMenuItem=Large Font
 smsMenuItem=SMS Alerts
 Scripts\:=Scripts:
 configurationFileFilter=Configurations (*.ini)
+checkUpdatesMenuItem=Check for updates
