Update non-JAXB dependencies
git-svn-id: https://localhost/svn/CounterManager/trunk@9315 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -9,17 +9,17 @@ auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=project
 excludes=countermanager/liveticker/ttm/TTMPrivate.java
 file.reference.commons-io-2.8.0.jar=lib/commons-io-2.8.0.jar
 file.reference.commons-lang3-3.12.0.jar=lib/commons-lang3-3.12.0.jar
-file.reference.gson-2.12.0.jar=lib/gson-2.12.0.jar
+file.reference.gson-2.13.1.jar=lib/gson-2.13.1.jar
 file.reference.httpclient5-5.0.3.jar=lib/httpclient5-5.0.3.jar
 file.reference.httpcore5-5.0.2.jar=lib/httpcore5-5.0.2.jar
 file.reference.istack-commons-runtime-3.0.7.jar=lib/istack-commons-runtime-3.0.7.jar
 file.reference.jaxb-runtime-2.3.1.jar=lib/jaxb-runtime-2.3.1.jar
 file.reference.JSCover-2.0.19.jar=lib/JSCover-2.0.19.jar
-file.reference.mssql-jdbc-12.8.0.jre11.jar=lib/mssql-jdbc-12.8.0.jre11.jar
-file.reference.rhino-1.7.15.jar=lib/rhino-1.7.15.jar
-file.reference.rhino-engine-1.7.15.jar=lib/rhino-engine-1.7.15.jar
+file.reference.mssql-jdbc-12.10.0.jre11.jar=lib/mssql-jdbc-12.10.0.jre11.jar
 file.reference.rhino-1.7.13.jar=lib/rhino-1.7.13.jar
+file.reference.rhino-1.8.0.jar=lib/rhino-1.8.0.jar
 file.reference.rhino-engine-1.7.13.jar=lib/rhino-engine-1.7.13.jar
+file.reference.rhino-engine-1.8.0.jar=lib/rhino-engine-1.8.0.jar
 file.reference.selenium-support-3.141.59.jar=lib\\selenium-support-3.141.59.jar
 file.reference.slf4j-api-2.0.16.jar=lib/slf4j-api-2.0.16.jar
 file.reference.slf4j-simple-2.0.16.jar=lib/slf4j-simple-2.0.16.jar
@@ -42,20 +42,20 @@ javac.test.classpath=\
     ${file.reference.selenium-support-3.141.59.jar}:\
     ${file.reference.JSCover-2.0.19.jar}
 file.reference.junit-4.13.jar=lib/junit-4.13.jar
-javadoc.reference.gson-2.12.0.jar=lib/gson-2.12.0-javadoc.jar
+javadoc.reference.gson-2.13.1.jar=lib/gson-2.13.1-javadoc.jar
 javadoc.reference.JSCover-2.0.19.jar=lib/JSCover-2.0.19-javadoc.jar
 javadoc.reference.junit-4.13.jar=lib/junit-4.13-javadoc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-javadoc.reference.mssql-jdbc-12.8.0.jre11.jar=lib/mssql-jdbc-12.8.0.jre11-javadoc.jar
-javadoc.reference.rhino-1.7.15.jar=lib/rhino-1.7.15-javadoc.jar
-javadoc.reference.rhino-engine-1.7.15.jar=lib/rhino-engine-1.7.15-javadoc.jar
+javadoc.reference.mssql-jdbc-12.10.0.jre11.jar=lib/mssql-jdbc-12.10.0.jre11-javadoc.jar
 javadoc.reference.rhino-1.7.13.jar=lib/rhino-1.7.13-javadoc.jar
+javadoc.reference.rhino-1.8.0.jar=lib/rhino-1.8.0-javadoc.jar
 javadoc.reference.rhino-engine-1.7.13.jar=lib/rhino-engine-1.7.13-javadoc.jar
+javadoc.reference.rhino-engine-1.8.0.jar=lib/rhino-engine-1.8.0-javadoc.jar
 javadoc.reference.slf4j-simple-2.0.16.jar=lib/slf4j-simple-2.0.16-javadoc.jar
 javadoc.reference.webdrivermanager-4.4.3.jar=lib/webdrivermanager-4.4.3-javadoc.jar
 jnlp.offline-allowed=false
 jnlp.signing.keystore=
-source.reference.gson-2.12.0.jar=lib/gson-2.12.0-sources.jar
+source.reference.gson-2.13.1.jar=lib/gson-2.13.1-sources.jar
 source.reference.ini4j-0.5.4.jar=lib/ini4j-0.5.4-sources.jar
 jnlp.signing.alias=
 annotation.processing.enabled=true
@@ -84,11 +84,11 @@ file.reference.jaxb-api-2.3.1.jar=lib\\jaxb-api-2.3.1.jar
 file.reference.selenium-remote-driver-3.141.59.jar=lib\\selenium-remote-driver-3.141.59.jar
 source.reference.JSCover-2.0.19.jar=lib/JSCover-2.0.19-sources.jar
 source.reference.junit-4.13.jar=lib/junit-4.13-sources.jar
-source.reference.mssql-jdbc-12.8.0.jre11.jar=lib/mssql-jdbc-12.8.0.jre11-sources.jar
-source.reference.rhino-1.7.15.jar=lib/rhino-1.7.15-sources.jar
-source.reference.rhino-engine-1.7.15.jar=lib/rhino-engine-1.7.15-sources.jar
+source.reference.mssql-jdbc-12.10.0.jre11.jar=lib/mssql-jdbc-12.10.0.jre11-sources.jar
 source.reference.rhino-1.7.13.jar=lib/rhino-1.7.13-sources.jar
+source.reference.rhino-1.8.0.jar=lib/rhino-1.8.0-sources.jar
 source.reference.rhino-engine-1.7.13.jar=lib/rhino-engine-1.7.13-sources.jar
+source.reference.rhino-engine-1.8.0.jar=lib/rhino-engine-1.8.0-sources.jar
 source.reference.slf4j-simple-2.0.16.jar=lib/slf4j-simple-2.0.16-sources.jar
 source.reference.webdrivermanager-4.4.3.jar=lib/webdrivermanager-4.4.3-sources.jar
 test.test.dir=test
@@ -155,14 +155,14 @@ javac.classpath=\
     ${file.reference.ini4j-0.5.4.jar}:\
     ${file.reference.jaxb-api-2.3.1.jar}:\
     ${file.reference.javax.activation-api-1.2.0.jar}:\
-    ${file.reference.gson-2.12.0.jar}:\
+    ${file.reference.gson-2.13.1.jar}:\
     ${file.reference.istack-commons-runtime-3.0.7.jar}:\
     ${file.reference.javax.activation-api-1.2.0.jar}:\
     ${file.reference.jaxb-runtime-2.3.1.jar}:\
     ${file.reference.vernacular-1.14.jar}:\
-    ${file.reference.mssql-jdbc-12.8.0.jre11.jar}:\
-    ${file.reference.rhino-engine-1.7.15.jar}:\
-    ${file.reference.rhino-1.7.15.jar}
+    ${file.reference.mssql-jdbc-12.10.0.jre11.jar}:\
+    ${file.reference.rhino-1.8.0.jar}:\
+    ${file.reference.rhino-engine-1.8.0.jar}
 build.classes.excludes=**/*.java,**/*.form,**/*.js,**/*.pas,**/*.html,**/*.css,**/*.js
 dist.jar=${dist.dir}/CounterManager.jar
 build.test.classes.dir=${build.dir}/test/classes
