Fix message for update checks
git-svn-id: https://localhost/svn/CounterManager/trunk@9319 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/gui/resources/CounterManager.properties
+++ b/src/countermanager/gui/resources/CounterManager.properties
@@ -193,3 +193,4 @@ smsMenuItem=SMS Alerts
 Scripts\:=Scripts:
 configurationFileFilter=Configurations (*.ini)
 checkUpdatesMenuItem=Check for updates
+You\ are\ using\ the\ current\ version\ of\ CounterManager.=You are using the current version of Scoreeboard Manager.
